--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -63,3 +63,11 @@
 .sidebar__voiceInfo > h3 {
     color: #4fb185;
 }
+
+.sidebar__voiceInfo > p {
+    font-size: smaller;
+}
+
+.sidebar__voiceIcons > .MuiSvgIcon-root {
+    padding: 10px;
+}
