--- a/src/ChatHeader.css
+++ b/src/ChatHeader.css
@@ -29,3 +29,16 @@
     padding: 5px;
     cursor: pointer;
 }
+
+.chatHeader__right > .MuiSvgIcon-root:hover {
+    color: white;
+}
+
+.chatHeader__search {
+    display: flex;
+    align-items: center;
+    color: gray;
+    background-color: #2f3135;
+    border-radius: 3px;
+    padding: 3px;
+}
