--- a/src/Chat.css
+++ b/src/Chat.css
@@ -22,7 +22,20 @@
     padding: 15px;
     background: transparent; 
     border: none;
+    width: 100%;
     outline-width: 0;
     color: white;
     font-size: large;
+}
+
+.chat__input > form {
+    flex: 1;
+}
+
+.chat__inputButton {
+    display: none;
+}
+
+.chat__inputIcons > .MuiSvgIcon-root {
+    padding: 5px;
 }
